[tool.poetry]
name = "yaptide"
version = "2.0.0"
description = "Yaptide Yet Another Particle Transport IDE"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.test.dependencies]
pre-commit = "4.2.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "1.5.3"
mkdocs-git-revision-date-localized-plugin = "1.4.4"
mkdocs-coverage = "1.0.0"
mkdocstrings = {version = ">=0.18", extras = ["python"]}
mkdocs-material = "9.5.18"
mkdocs-gen-files = "0.5.0"
mkdocs-literate-nav = "0.6.2"
mkdocs-section-index = "0.3.9"
mkdocs-render-swagger-plugin = "0.1.2"